--- a/flex/02-flex-header/index.html
+++ b/flex/02-flex-header/index.html
@@ -7,10 +7,12 @@
     <title>Flex Header</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
+
   <body>
     <div class="header">
       <div class="left-links">
-        <ul>
+        <ul class="left-links-flex">
           <li><a href="#">ONE</a></li>
           <li><a href="#">TWO</a></li>
           <li><a href="#">THREE</a></li>
@@ -18,7 +20,7 @@
       </div>
       <div class="logo">LOGO</div>
       <div class="right-links">
-        <ul>
+        <ul class="right-links-flex">
           <li><a href="#">FOUR</a></li>
           <li><a href="#">FIVE</a></li>
           <li><a href="#">SIX</a></li>
